--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Chuck GeekDong
 email: zhangqidonglove@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A geek who has been trying
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/jekylldemo" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: chuck
 github_username:  zqdlove
